// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> no projection selected should render 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Slider /> no projection selected should render without label 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiIconButton-root button-class"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
